// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitInput renders with custom options 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-z656qp-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-z656qp-container.cache-z656qp-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-z656qp-container:hover,
.cache-z656qp-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="test-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-z656qp-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            KB
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test-unit"
        type="hidden"
        value="kb"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with default props 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-z656qp-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-z656qp-container.cache-z656qp-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-z656qp-container:hover,
.cache-z656qp-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="test-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-z656qp-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with defaultOption 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-z656qp-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-z656qp-container.cache-z656qp-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-z656qp-container:hover,
.cache-z656qp-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="test-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-z656qp-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with defaultValue 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-z656qp-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-z656qp-container.cache-z656qp-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-z656qp-container:hover,
.cache-z656qp-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="test-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="10"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-z656qp-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with disabled and placeHolder 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-cqmvoo {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-cqmvoo::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cqmvoo::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cqmvoo:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cqmvoo::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cqmvoo:hover,
.cache-cqmvoo:focus {
  border-color: #dbdbdf;
}

.cache-cqmvoo:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-cqmvoo::-webkit-input-placeholder {
  opacity: 1;
}

.cache-cqmvoo::-moz-placeholder {
  opacity: 1;
}

.cache-cqmvoo:-ms-input-placeholder {
  opacity: 1;
}

.cache-cqmvoo::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-1xzdm2s-container {
  width: 100%;
  pointer-events: initial;
  pointer-events: none;
  position: relative;
  box-sizing: border-box;
}

.cache-1xzdm2s-container.cache-1xzdm2s-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-1xzdm2s-container:hover,
.cache-1xzdm2s-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-15ftxnd-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fafafb;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: none;
  border-width: 0;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #dce1eb;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-15ftxnd-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-yjpdw5-singleValue {
  color: #b2b6c3;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-imudgr-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: hidden;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-fqzpe {
  fill: #dce1eb;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-fqzpe.cache-fqzpe {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-cqmvoo e18bmnpq0"
          disabled=""
          name="test-value"
          placeholder="100"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-1xzdm2s-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-15ftxnd-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-yjpdw5-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-imudgr-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                disabled=""
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-fqzpe e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with min max 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-z656qp-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-z656qp-container.cache-z656qp-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-z656qp-container:hover,
.cache-z656qp-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="test-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-z656qp-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with size large 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-mebwkv-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-mebwkv-container.cache-mebwkv-container {
  width: 200px;
  height: 48px;
  margin-top: 0;
}

.cache-mebwkv-container:hover,
.cache-mebwkv-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1z0eyba-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 48px;
  -webkit-animation: none;
  animation: none;
}

.cache-1z0eyba-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1z0eyba-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1z0eyba-control:focus-within svg {
  fill: #4f0599;
}

.cache-1z0eyba-control:hover {
  border-color: #4f0599;
}

.cache-1z0eyba-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="default-value"
          placeholder="0"
          style="height: 48px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-mebwkv-container e7ah3bn0"
      data-testid="rich-select-default-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1z0eyba-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="default-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with size medium 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-z656qp-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-z656qp-container.cache-z656qp-container {
  width: 200px;
  height: 40px;
  margin-top: 0;
}

.cache-z656qp-container:hover,
.cache-z656qp-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="default-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-z656qp-container e7ah3bn0"
      data-testid="rich-select-default-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="default-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with size small 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-qbxbk4-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-qbxbk4-container.cache-qbxbk4-container {
  width: 200px;
  height: 32px;
  margin-top: 0;
}

.cache-qbxbk4-container:hover,
.cache-qbxbk4-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1986ye9-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 32px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 32px;
  -webkit-animation: none;
  animation: none;
}

.cache-1986ye9-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1986ye9-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1986ye9-control:focus-within svg {
  fill: #4f0599;
}

.cache-1986ye9-control:hover {
  border-color: #4f0599;
}

.cache-1986ye9-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="default-value"
          placeholder="0"
          style="height: 32px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-qbxbk4-container e7ah3bn0"
      data-testid="rich-select-default-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1986ye9-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="default-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnitInput renders with textBoxWidth and richSelectWidth 1`] = `
<DocumentFragment>
  .cache-xfl9g5.cache-xfl9g5 {
  width: 100px;
}

.cache-xfl9g5 input {
  border-radius: 4px 0 0 4px;
  border-right: 0;
}

.cache-xfl9g5 input:hover,
.cache-xfl9g5 input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  border-right: 1px solid #4f0599;
  z-index: 1;
  padding-right: 7px;
}

.cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-5kb0eg-container {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-5kb0eg-container.cache-5kb0eg-container {
  width: 100px;
  height: 40px;
  margin-top: 0;
}

.cache-5kb0eg-container:hover,
.cache-5kb0eg-container:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-4804d0-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-4804d0-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-4804d0-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-4804d0-control:focus-within svg {
  fill: #4f0599;
}

.cache-4804d0-control:hover {
  border-color: #4f0599;
}

.cache-4804d0-control:hover svg {
  fill: #4f0599;
}

.cache-1ycj452-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.cache-62fj5j-singleValue {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1mkawrf-Input {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
}

.cache-1xege3a-Input {
  padding-top: 11px;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-bf5rcc-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-rq2ji6 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-rq2ji6.cache-rq2ji6 {
  vertical-align: middle;
  margin-right: 0;
}

<div
    style="display: flex;"
  >
    <div
      class="e1ixhdo11 cache-xfl9g5 e7ah3bn0"
    >
      <div
        class="cache-zkzsno e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-twjxea e18bmnpq0"
          name="test-value"
          placeholder="0"
          style="height: 40px;"
          type="number"
          value="1"
        />
      </div>
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
    <div
      class="e1ixhdo10 e1lzna4r1 cache-5kb0eg-container e7ah3bn0"
      data-testid="rich-select-test-unit"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-4804d0-control"
      >
        <div
          class=" cache-1ycj452-ValueContainer"
        >
          <div
            class=" cache-62fj5j-singleValue"
          >
            Hours
          </div>
          <div
            class="cache-1mkawrf-Input"
          >
            <div
              class="cache-1xege3a-Input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-bf5rcc-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-rq2ji6 e7ah3bn0"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test-unit"
        type="hidden"
        value="hours"
      />
      <div
        class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
      >
        <div
          class="cache-1jgvrmi e7ah3bn0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
